--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Web 2 Starter</title>
+  <title>Stand Alone Portfolio</title>
  
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <!-- Normalize CSS makes browsers render all elements more consistently -->
-  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">  
+  
+  <!-- Normalize CSS makes browsers render all elements more consistently --> 
+  
   <!-- YOUR STYLES GO HERE -->
-  <link rel="stylesheet" href="css/styles.css">	
+  <link rel="stylesheet" href="scss/styles.css">	
 	
 </head>
 <body>
 	
   <!-- YOUR AWESOME WEBSITE -->
 	<h1>Web 2 Starter</h1>
-
+<figure>
+   <a href="img/500.jpg">
+    <img src="http://placehold.it/100x100" alt="">
+    
+</a>
+    <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima quasi nam, ad exercitationem quas atque modi deleniti tenetur impedit, tempora et sequi eveniet a porro. Facere illum cumque quibusdam ipsam!</figcaption>
+    
+</figure>
 	
 
 
